# APIs-BR

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
apisbr/: API.py  AgregadosIBGE.py  DadosAbertos.py  __init__.py
apisbr/api/: API.py  AgregadosIBGE.py  DadosAbertos.py  IBGEAgregados.py  IBGELocalidades.py  IPEAData.py  LocalidadesIBGE.py  __init__.py
apisbr/assets/: ibge_level_identifiers.txt
apisbr/core/: API.py  DateParser.py  __init__.py  apis_internal_functions.py
apisbr/labels/: IBGELocalidades.py  __init__.py  uf_naming_funcs.py
apisbr/utils/: __init__.py  basic_functions.py  data_processing_functions.py  text_format_funcs.py  uf_naming_funcs.py
doc/: doc_update.sh  open_doc.py
doc/apisbr/: API.html  DadosAbertos.html  index.html
doc/apisbr/api/: API.html  AgregadosIBGE.html  DadosAbertos.html  IBGEAgregados.html  IBGELocalidades.html  IPEAData.html  LocalidadesIBGE.html  index.html
doc/apisbr/core/: API.html  DateParser.html  apis_internal_functions.html  data_functions.html  data_processing_functions.html  index.html
doc/apisbr/labels/: IBGELocalidades.html  index.html  uf_naming_funcs.html
doc/apisbr/utils/: basic_functions.html  data_processing_functions.html  index.html  text_format_funcs.html  uf_naming_funcs.html
tests/: api_general_test.py  api_localidades_test.py  api_test.py  apis_general_test.py  ftp_test.ipynb  general_test.py  localidades_test.py  test.ipynb
