[project]
name = "apis-br"
version = "0.1.0"
description = "A Python package for simplified requests in brazilian data APIs (e.g. IBGE Agregados)"
readme = "README.md"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
keywords = ["api", "brasil", "ibge", "agregados", "dados abertos"]
requires-python = ">=3.12"
authors = [
  {name = "Gabriel Martins", email = "gbielsesc@gmail.com"}
]
dependencies = [
    "dateparser>=1.2.0",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "pdoc3>=0.11.5",
    "pytest>=8.3.4",
    "python-dotenv>=1.0.1",
]

[project.urls]
Homepage = "https://github.com/G4brielMartins/apis-br/wiki"
Documentation = "http://htmlpreview.github.io/?https://github.com/G4brielMartins/apis-br/blob/master/doc/apisbr/index.html"
Repository = "https://github.com/G4brielMartins/apis-br"
Issues = "https://github.com/G4brielMartins/apis-br/issues"

[project.scripts]
apisbr-doc = "doc:open_doc"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
  "apisbr/*",
  "/tests"
]